force-app/main/default/objects/Log_Plugin__mdt/Log_Plugin__mdt.object-meta.xml
<CustomObject>
    <label>Log Plugin</label>
    <pluralLabel>Log Plugins</pluralLabel>
</CustomObject>