force-app/main/default/objects/Log_Plugin__mdt/fields/ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>ApexClassName__c</fullName>
    <label>Apex Class Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Must implement LoggerPluginTriggerable and have a no-argument constructor (instantiated via Type.forName().newInstance()).</description>
</CustomField>