force-app/main/default/objects/Log_Plugin__mdt/fields/ExecutionOrder__c.field-meta.xml
<CustomField>
    <fullName>ExecutionOrder__c</fullName>
    <label>Execution Order</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Lower runs first. Plugins with the same order run in an unspecified relative sequence.</description>
</CustomField>