force-app/main/default/objects/Log_Plugin__mdt/fields/SObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>SObjectApiName__c</fullName>
    <label>SObject API Name</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>Which object's trigger this plugin runs on — "Log__c" or "Log_Entry__c".</description>
</CustomField>